--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -9,16 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.4",
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "date-fns": "^3.0.0",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.484.0",
+    "mongoose": "^8.12.0",
+    "next": "15.2.4",
+    "next-auth": "^4.24.11",
+    "next-themes": "latest",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.2",
+    "react-resizable-panels": "^2.1.7",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "postcss": "^8",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
