--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -12,24 +12,27 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.20",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.4",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.4",
     "date-fns": "^3.0.0",
     "dotenv": "^16.4.7",
+    "install": "^0.13.0",
     "lucide-react": "^0.484.0",
     "mongoose": "^8.12.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "latest",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
