--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -28,6 +28,7 @@
     "next-themes": "latest",
     "npm": "^11.2.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
