--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.777.0",
+    "@react-google-maps/api": "^2.20.6",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.20",
@@ -35,6 +37,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
