--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.777.0",
+    "@aws-sdk/credential-providers": "^3.778.0",
     "@react-google-maps/api": "^2.20.6",
     "@types/react": "latest",
     "@types/react-dom": "latest",
