--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -30,10 +30,10 @@
     "next-auth": "^4.24.11",
     "next-themes": "latest",
     "npm": "^11.2.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-calendar": "^5.1.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react-day-picker": "^9.6.4",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
