--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.0.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "install": "^0.13.0",
     "lucide-react": "^0.484.0",
