--- a/hotel-booking-app/package.json
+++ b/hotel-booking-app/package.json
@@ -39,6 +39,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "react-responsive-carousel": "^3.2.23",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
